gccida/c0/emit_move_insn_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3276:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v3; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3292:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v19; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3308:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // [rsp+20h] [rbp-1D0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3309:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // [rsp+24h] [rbp-1CCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3314:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v42; // [rsp+4Ch] [rbp-1A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3323:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // [rsp+B4h] [rbp-13Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3326:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // [rsp+E4h] [rbp-10Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3330:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v58; // [rsp+10Ch] [rbp-E4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3334:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+134h] [rbp-BCh] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3348:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode reg_mode; // [rsp+180h] [rbp-70h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3356:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class classa; // [rsp+1CCh] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3357:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode submode; // [rsp+1D0h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3358:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+1D4h] [rbp-1Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3365:10: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
classa = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)x)]; 
         ^~~~~~~~~~~~
         mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3370:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v2 = insn_data_0[optab_table[30]->handlers[( unsigned __int8)BYTE2( *( _DWORD *)x)].insn_code].genfun( x, y); 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3370:102: error: called object type '<dependent type>' is not a function or function pointer
v2 = insn_data_0[optab_table[30]->handlers[( unsigned __int8)BYTE2( *( _DWORD *)x)].insn_code].genfun( x, y); 
                                                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3388:26: error: use of undeclared identifier 'machine_mode'
if ( push_operand( xa, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)) ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3388:41: error: expected expression
if ( push_operand( xa, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)xa)) ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/expr.c:3480:33: error: invalid suffix 'orce' on integer constant
ypart = operand_sub*(short *)0xforce( ya, i, mode); 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_move_insn_1/src/obj/expr.o] Error 1
